--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "vue-property-decorator": "^8.3.0"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^2.13.0",
+    "@typescript-eslint/parser": "^2.13.0",
     "@vue/cli-plugin-babel": "^4.1.0",
     "@vue/cli-plugin-eslint": "^4.1.0",
     "@vue/cli-plugin-typescript": "^4.1.1",
@@ -24,7 +26,7 @@
     "@vue/eslint-config-typescript": "^4.0.0",
     "babel-eslint": "^10.0.3",
     "css-loader": "^3.4.0",
-    "eslint": "^5.16.0",
+    "eslint": "5.16.0",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-vue": "^5.0.0",
     "prettier": "^1.19.1",
