--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@types/three": "^0.103.2",
     "core-js": "^3.4.3",
+    "stats-js": "^1.0.1",
     "three": "^0.112.1",
     "vue": "^2.6.11",
     "vue-class-component": "^7.1.0",
