--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,10 +15,15 @@
     "types": [
       "webpack-env"
     ],
+    "typeRoots": [
+      "node_modules/@types",
+      "./types"
+    ],
     "paths": {
       "@/*": [
         "src/*"
-      ]
+      ],
+      "*": ["types/*"]
     },
     "lib": [
       "esnext",
