--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve --hot",
+    "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
@@ -12,6 +12,8 @@
     "core-js": "^3.4.3",
     "stats-js": "^1.0.1",
     "three": "^0.112.1",
+    "three-fbx-loader": "^1.0.3",
+    "three-gltf-loader": "^1.111.0",
     "vue": "^2.6.11",
     "vue-class-component": "^7.1.0",
     "vue-property-decorator": "^8.3.0"
